infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  # specify amount of pods
  replicas: 1
  selector:
    # find al the pods with app posts
    matchLabels:
      app: posts
  template:
    metadata:
      # Add label app: posts
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: rvanappeldorn/posts-service
